Travel::Status::DE::IRIS 1.17 - Sat Apr 14 2018

    * Fix DS100 codes for Dülmen, Stuttgart Hbf (tief), and Wolfenbüttel
    * db-iris: Support -d/--date "tomorrow"

Travel::Status::DE::IRIS 1.16 - Sat Jul 08 2017

    * Fix miscalculated delays of prematurely terminating trains
    * Lookahead and lookbehind are now interpreted with 1-minute granularity.
      Note that this also affects the default lookahead.
    * Fix floating point-related test failures on some architectures
    * New "./Build test" dependency: Test::Number::Delta

Travel::Status::DE::IRIS 1.15 - Tue Jun 06 2017

    * Performance improvements
    * Distinguish between cancelled/additional arrivals and departures
    * Travel::Status::DE::IRIS::Result: New accessors arrival_is_additional,
      arrival_is_cancelled, departure_is_additional, departure_is_cancelled
      and is_additional.
    * Travel::Status::DE::IRIS::Result: is_cancelled now only returns true
      if both arrival and departure have been cancelled.

Travel::Status::DE::IRIS 1.14 - Mon Feb 06 2017

    * IRIS->new: Add optional argument lookbehind
    * db-iris: Remove a useless HTTP request, resulting in slightly faster
               responses
    * db-iris -V / --track-via: Improve support for faraway stations

Travel::Status::DE::IRIS 1.13 - Thu Jan 26 2017

    * Fix support for line numbers, remove manual line map workaround

Travel::Status::DE::IRIS 1.12 - Fri Dec 30 2016

    * Unfortunately, line numbers are not available at the moment due to IRIS
      backend changes. Some lines in NRW have been provided with a manual line
      number mapping to remedy this.
    * Fix DS100 code for "Bielefeld Hbf"
    * Travel::Status::DE::IRIS::Stations::get_station_by_location: Fix bug in
      num_matches (parameter was silently ignored)

Travel::Status::DE::IRIS 1.11 - Tue Oct 11 2016

    * IRIS->new: Fix partially broken cache handling when using
      "with_related => 1"
    * Improve parser performance
